Fix: Agrega load static a gestionar_horarios

--- a/templates/core/gestionar_horarios.html
+++ b/templates/core/gestionar_horarios.html
@@ -1,4 +1,5 @@
 {% extends 'core/panel.html' %}
+{% load static %}
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
   <div>
